# Zorvyn_Backend_Internship_Test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2026_04_01_1958-869b63555b3f_initial_tables.py  2026_04_01_2047-6be970e8c342_add_indexing_to_financial_records.py
app/core/: config.py  database.py
app/dependencies/: access_control.py
app/models/: financial_record.py  user.py
app/routes/: dashboard.py  records.py  users.py
app/schemas/: dashboard.py  financial_record.py  user.py
app/services/: dashboard_service.py  record_service.py  user_service.py
app/utils/: __init__.py  exceptions.py
scripts/: seed_admin.py
