[project]
name = "finance-backend"
version = "0.1.0"
description = "Finance Data Processing & Access Control Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = ["taskipy>=1.13.0", "httpx>=0.27.0"]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8065"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"
downgrade = "alembic downgrade -1"
seed = "PYTHONPATH=. python scripts/seed_admin.py"

[dependency-groups]
dev = ["taskipy>=1.14.1"]
